--- a/src/app.css
+++ b/src/app.css
@@ -6,12 +6,14 @@
 	--branding-secondary: #3d3938;
 
 	--dark: #313131;
-	--dark_secondary: #464545;
-	--dark_accent: #1d1d1d;
+	--dark_secondary: rgb(43, 43, 43);
+	--dark_accent: rgb(26, 26, 26);
+	--dark_link_hover: rgb(164, 164, 164);
 
-	--light: #f2f2f2;
-	--light_secondary: #eeebeb;
+	--light: #dadada;
+	--light_secondary: #e2dddd;
 	--light_accent: #e8e8e8;
+	--light_link_hover: rgb(157, 157, 157);
 
 	--text: var(--dark);
 	--text-inverse: var(--light);
@@ -21,6 +23,7 @@
 	--primary: var(--light);
 	--secondary: var(--light_secondary);
 	--accent: var(--light_accent);
+	--link_hover: var(--light_link_hover);
 }
 
 .dark-theme {
@@ -31,6 +34,7 @@
 	--primary: var(--dark);
 	--secondary: var(--dark_secondary);
 	--accent: var(--dark_accent);
+	--link_hover: var(--dark_link_hover);
 }
 
 /* Mobile Only */
@@ -176,14 +180,14 @@ div.column {
 }
 
 div.card {
-	background-color: var(--primary);
+	background-color: var(--accent);
 	padding: 2em;
 	border-radius: 10px;
 }
 
 select {
 	color: var(--text);
-	background-color: var(--accent);
+	background-color: var(--primary);
 	width: 100%;
 	height: 50px;
 	margin-top: 1em;
@@ -198,6 +202,7 @@ select {
 select:hover,
 select:hover::after {
 	cursor: pointer;
+	background-color: var(--link_hover);
 }
 
 label {
@@ -205,11 +210,14 @@ label {
 }
 
 button.toggle {
-	background-color: var(--primary);
+	background-color: var(--accent);
 	border-radius: 10px;
+}
+button.toggle:hover {
+	background-color: var(--link_hover);
 }
 
 .clickable:hover {
 	cursor: pointer;
-	background-color: var(--accent);
+	background-color: var(--link_hover);
 }
