Revert "Fix Input styling"
This reverts commit 9fe5538080cafedb1572f9dd6c2aa34255872892.

--- a/src/app.css
+++ b/src/app.css
@@ -306,7 +306,7 @@ div.spriteWrapper {
 	max-width: 96px;
 }
 
-input[type='email'] input[type='password'] input[type='text'] {
+input {
 	height: 5vw;
 	min-height: 34px;
 	border-radius: 5px;
