--- a/src/app.css
+++ b/src/app.css
@@ -100,6 +100,17 @@ body {
 	background-color: var(--bg-primary);
 }
 
+#pageWrapper {
+	min-height: 40vh;
+}
+
+footer {
+	width: 100%;
+	border-top: 1px solid var(--text);
+	padding-top: 0.5rem;
+	text-align: center;
+}
+
 #navbar {
 	display: flex;
 	background-color: var(--branding-secondary);
