--- a/src/app.css
+++ b/src/app.css
@@ -86,14 +86,17 @@ a.no-style {
 
 h1 {
 	font-size: xx-large;
+	padding-bottom: 1rem;
 }
 
 h2 {
 	font-size: x-large;
+	padding-bottom: 0.75rem;
 }
 
 h3 {
 	font-size: large;
+	padding-bottom: 0.5rem;
 }
 
 h4 {
