Fix layout when no next/prev entry exists

--- a/src/app.css
+++ b/src/app.css
@@ -222,6 +222,10 @@ div.column {
 	border-bottom: 4rem solid;
 }
 
+.hidden {
+	display: none;
+}
+
 select {
 	color: var(--text);
 	background-color: var(--primary);
