--- a/static/styles/home.css
+++ b/static/styles/home.css
@@ -13,6 +13,10 @@
 		display: grid;
 		justify-content: center;
 	}
+
+	#pokemonOTDWrapper > .card {
+		min-width: 100%;
+	}
 }
 
 @media screen and (min-width: 768px) {
@@ -21,5 +25,9 @@
 	}
 	.column:last-child {
 		padding-right: 0;
+	}
+
+	#pokemonOTDWrapper > .card {
+		min-width: 33.3333334%;
 	}
 }
