--- a/src/app.css
+++ b/src/app.css
@@ -89,26 +89,26 @@ a.no-style {
 	text-decoration: none;
 }
 
-h1 {
+.h1 {
 	font-size: xx-large;
 	padding-bottom: 1rem;
 }
 
-h2 {
+.h2 {
 	font-size: x-large;
 	padding-bottom: 0.75rem;
 }
 
-h3 {
+.h3 {
 	font-size: larger;
 	padding-bottom: 0.5rem;
 }
 
-h4 {
+.h4 {
 	font-size: large;
 }
 
-h5 {
+.h5 {
 	font-size: medium;
 	font-weight: bold;
 }
