--- a/src/styles/fonts.css
+++ b/src/styles/fonts.css
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 
-:root {
+* {
     font-family: "Roboto", serif;
     font-optical-sizing: auto;
     font-weight: 400;
@@ -8,7 +8,20 @@
     font-variation-settings: "slnt" 0;
 }
 
+.h1 {
+    font-weight: 600;
+    font-size: xx-large;
+    padding-bottom: 0.25rem;
+}
+
 .h2 {
     font-weight: 500;
     font-size: x-large;
+    padding-bottom: 0.25rem;
+}
+
+.h3 {
+    font-weight: 500;
+    font-size: large;
+    padding-bottom: 0.1rem;
 }
