--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -3,6 +3,7 @@
 @import url('./tailwind.css');
 @import url('./layout.css');
 @import url('./helpers.css');
+@import url('./elements.css');
 
 body {
 	background-color: var(--site-background);
