--- a/src/styles/fonts.css
+++ b/src/styles/fonts.css
@@ -8,6 +8,14 @@
     font-variation-settings: "slnt" 0;
 }
 
+html {
+    font-family: "Roboto", serif;
+    font-optical-sizing: auto;
+    font-weight: 400;
+    font-style: normal;
+    font-variation-settings: "slnt" 0;
+}
+
 .h1 {
     font-weight: 600;
     font-size: xx-large;
