--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -4,6 +4,7 @@
 @import url('./layout.css');
 @import url('./helpers.css');
 @import url('./elements.css');
+@import url('./states.css');
 
 body {
 	background-color: var(--site-background);
