--- a/src/styles/fonts.css
+++ b/src/styles/fonts.css
@@ -33,3 +33,8 @@ html {
     font-size: large;
     padding-bottom: 0.1rem;
 }
+
+.h4, .h4 * {
+    font-weight: 500;
+    padding-bottom: 0.1rem;
+}
